feat :  기간별/채널별 api 별도 구현